updated TrendingAnime query and Anime data class to only include needed info updated AnimeCard to include Average Score added unit tests for AnimeRepositoryImplTest and DashboardViewModelTest added Turbine for testing flow added MainDispatcherRule